--- a/styles.css
+++ b/styles.css
@@ -64,15 +64,15 @@ body {
 }
 
 #gameContainer {
-  min-width: 600px;
-  min-height: 350px;
+  min-width: 630px;
+  min-height: 460px;
   max-height: 85%;
   max-width: 85%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  /* filter: blur(8px); */
+   /*filter: blur(8px); */
 }
 
 
@@ -135,6 +135,7 @@ body {
   opacity: .8;
   z-index: 1;
   cursor: pointer;
+  /*display: none;*/
 }
 
 /* Canvas
@@ -235,3 +236,28 @@ canvas {
 /* ==========================================================================
    State Rules
    ========================================================================== */
+@keyframes grow {
+  from {
+    visibility: hidden;
+    opacity: 0;
+    transform: scale(0);
+  }
+  to {
+    visibility: visible;
+    opacity: .8;
+    transform: scale(1);
+  }
+}
+
+@keyframes shrink {
+  from {
+    visibility: visible;
+    opacity: .8;
+    transform: scale(1);
+  }
+  to {
+    visibility: hidden;
+    opacity: 0;
+    transform: scale(0);
+  }
+}
